deployments/pathweb/workloads/home-network/authentik/config/external-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-external
  annotations:
    cert-manager.io/cluster-issuer: le-yrf-me
    external-dns.alpha.kubernetes.io/target: ingress-pathweb-clusters-home.yrf.me
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  labels:
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
    external-dns: cf-yrf-me
spec:
  ingressClassName: traefik-external
  rules:
  - host: auth-home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: authentik-server
            port:
              name: http
  tls:
  - secretName: authentik-public-cert
    hosts:
    - auth-home.yrf.me
